# osmo

./: README.md
tags/.svn/: all-wcprops  entries
tags/RELEASE_0_1_0/: AUTHORS  autogen.sh
tags/RELEASE_0_1_0/.svn/: all-wcprops  entries
tags/RELEASE_0_1_0/src/: calendar_fullyear.h  contacts.h  contacts_export.c  contacts_export.h  contacts_items.c  gui_utils.h  options_gui.h  options_prefs.c  stock_icons.c  stock_icons_data.h  tasks_items.c  tasks_items.h
tags/RELEASE_0_1_1/: ChangeLog  README
tags/RELEASE_0_1_1/.svn/: all-wcprops  entries
tags/RELEASE_0_1_1/po/: Makefile.am  osmo.pot  pl.po  pt.po
tags/RELEASE_0_1_1/src/: calendar_fullyear.c  calendar_notes.c  calendar_utils.c  calendar_utils.h  calendar_widget.h  contacts_export.c  contacts_import.h  contacts_items.c  options_gui.c  stock_icons.h  stock_icons_data.h  tasks.h
tags/RELEASE_0_1_2/: README  autogen.sh  configure.ac
tags/RELEASE_0_1_2/.svn/: all-wcprops  entries
tags/RELEASE_0_1_2/.svn/text-base/: ChangeLog.svn-base  Makefile.am.svn-base
tags/RELEASE_0_1_2/po/: Makefile.am  cs.po  osmo.pot  pl.po  pt.po
tags/RELEASE_0_1_2/po/.svn/: all-wcprops  entries
tags/RELEASE_0_1_2/po/.svn/text-base/: de.po.svn-base  fr.po.svn-base
tags/RELEASE_0_1_2/src/: calendar.c  calendar.h  calendar_fullyear.c  calendar_jumpto.c  calendar_notes.c  calendar_utils.c  calendar_utils.h  calendar_widget.c  contacts.c  contacts_export.h  contacts_import.h  contacts_items.c  contacts_items.h  gui.h  gui_logo.h  gui_utils.h  main.c  options_prefs.c  stock_icons_data.h  tasks.c  tasks_items.h  time_utils.c  time_utils.h
tags/RELEASE_0_1_2/src/.svn/: all-wcprops  entries
tags/RELEASE_0_1_2/src/.svn/text-base/: Makefile.am.svn-base  calendar_calc.c.svn-base  calendar_notes.h.svn-base  calendar_widget.h.svn-base  contacts_export.c.svn-base  contacts_import.c.svn-base  gui.c.svn-base  gui_utils.c.svn-base  options_gui.c.svn-base  options_prefs.h.svn-base  stock_icons.c.svn-base  stock_icons.h.svn-base  tasks_items.c.svn-base
tags/RELEASE_0_1_4/: AUTHORS  TRANSLATORS  configure.ac
tags/RELEASE_0_1_4/.svn/: all-wcprops  entries
tags/RELEASE_0_1_4/po/: pl.po
tags/RELEASE_0_1_4/src/: Makefile.am  calendar.h  calendar_jumpto.c  calendar_notes.c  calendar_notes.h  contacts_birthdays.h  contacts_items.c  gui.c  gui.h  gui_logo.h  main.c  options_gui_contacts.c  options_gui_general.c  options_prefs.c  options_prefs.h  stock_icons.c  stock_icons_data.h
tags/RELEASE_0_1_4/src/.svn/: all-wcprops  entries
tags/RELEASE_0_1_4/src/.svn/text-base/: calendar.c.svn-base  calendar_calc.h.svn-base  calendar_fullyear.c.svn-base  contacts.c.svn-base  contacts.h.svn-base  contacts_birthdays.c.svn-base  contacts_export.c.svn-base  contacts_import.h.svn-base  date_utils.h.svn-base  options_gui.c.svn-base  options_gui_calendar.c.svn-base  options_gui_calendar.h.svn-base  options_gui_tasks.h.svn-base  stock_icons.h.svn-base  tasks.c.svn-base  tasks_items.c.svn-base  tasks_items.h.svn-base  time_utils.c.svn-base
tags/RELEASE_0_1_6/: ChangeLog  TRANSLATORS
tags/RELEASE_0_1_6/.svn/: all-wcprops  entries
tags/RELEASE_0_1_6/po/: fr.po  pl.po
tags/RELEASE_0_1_6/src/: Makefile.am  calendar.c  calendar_calc.c  contacts.c  date_utils.c  gui.c  gui_icon.h  main.c  options_gui.c  options_gui_calendar.h  options_gui_general.c  options_gui_general.h  options_gui_tasks.c  options_prefs.c  options_prefs.h  stock_icons.h  stock_icons_data.h  tasks.c
tags/RELEASE_0_2_0/: README  configure.ac
tags/RELEASE_0_2_0/.svn/: all-wcprops  entries
tags/RELEASE_0_2_0/po/: cs.po  de.po  osmo.pot
tags/RELEASE_0_2_0/src/: Makefile.am  calendar_calc.c  calendar_ical.c  calendar_notes.c  calendar_notes.h  calendar_widget.h  contacts.c  (+15 more)
tags/RELEASE_0_2_2/: ChangeLog  configure.ac
tags/RELEASE_0_2_2/.svn/: all-wcprops  entries
tags/RELEASE_0_2_2/.svn/text-base/: AUTHORS.svn-base  Makefile.am.svn-base  README.svn-base  TRANSLATORS.svn-base  autogen.sh.svn-base  osmo.1.svn-base  osmo.desktop.svn-base
tags/RELEASE_0_2_2/m4/.svn/: all-wcprops  entries
tags/RELEASE_0_2_2/po/: Makefile.am  fr.po  hu.po  it.po  lt.po  pl.po  pt.po  ru.po
tags/RELEASE_0_2_2/po/.svn/: all-wcprops  entries
tags/RELEASE_0_2_2/po/.svn/text-base/: cs.po.svn-base  de.po.svn-base  es.po.svn-base  nl.po.svn-base  osmo.pot.svn-base  zh.po.svn-base
tags/RELEASE_0_2_2/src/: calendar_calc.c  calendar_ical.c  calendar_ical.h  calendar_notes.h  calendar_utils.h  calendar_widget.c  check_events.c  contacts.c  contacts_birthdays.c  contacts_birthdays.h  contacts_import_csv.c  contacts_import_syncml.c  contacts_items.c  gui_utils.c  gui_utils.h  options_gui.c  options_gui_calendar.c  options_gui_notes.c  options_gui_tasks.h  stock_icons.h  stock_icons_data.h  tasks.c  tasks.h  tasks_items.c
tags/RELEASE_0_2_2/src/.svn/: all-wcprops  entries
tags/RELEASE_0_2_2/src/.svn/text-base/: Makefile.am.svn-base  calendar.c.svn-base  calendar.h.svn-base  calendar_fullyear.c.svn-base  calendar_jumpto.c.svn-base  calendar_notes.c.svn-base  calendar_utils.c.svn-base  contacts.h.svn-base  contacts_export.c.svn-base  contacts_import.c.svn-base  contacts_import_vcard.c.svn-base  credits.h.svn-base  gui.c.svn-base  gui.h.svn-base  main.c.svn-base  notes.c.svn-base  notes.h.svn-base  notes_items.c.svn-base  options_gui_contacts.c.svn-base  options_gui_general.c.svn-base  options_gui_general.h.svn-base  options_gui_notes.h.svn-base  options_gui_tasks.c.svn-base  options_prefs.c.svn-base  options_prefs.h.svn-base  stock_icons.c.svn-base
tags/RELEASE_0_2_4/: AUTHORS  ChangeLog  TRANSLATORS  configure.ac
tags/RELEASE_0_2_6/: AUTHORS  configure.ac
tags/RELEASE_0_2_8/: AUTHORS  ChangeLog  README
trunk/: ChangeLog  README  TRANSLATORS  configure.ac
trunk/.svn/: all-wcprops  entries
trunk/po/: Makefile.am  ca.po  cs.po  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  nl.po  osmo.pot  pl.po  ru.po  sv.po  uk.po
trunk/src/: Makefile.am  about.c  calendar.c  check_events.c  gui.c  notes_items.c  stock_icons.c  stock_icons.h  stock_icons_data.h  tasks.c  tasks.h  tasks_gcal.c  tasks_gcal.h
(+439 files in other folders)
